[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/img/bg.png" type="Texture" id=2]
[ext_resource path="res://zombie.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/btn_jump_100.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btn_attack_100.png" type="Texture" id=5]

[node name="Container" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="BG" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="bg" type="Sprite" parent="BG"]

transform/pos = Vector2( 640.477, 362.024 )
texture = ExtResource( 2 )

[node name="zombie1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 200, 100 )

[node name="Camera2D" type="Camera2D" parent="zombie1"]

transform/pos = Vector2( 27.0323, -33.2124 )
offset = Vector2( 500, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 720
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 1.0

[node name="HUD" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="btn_jump" type="Control" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1139.0
margin/top = 525.0
margin/right = 1239.0
margin/bottom = 627.0

[node name="Sprite" type="Sprite" parent="HUD/btn_jump"]

transform/pos = Vector2( 50, 50 )
z/z = 10
texture = ExtResource( 4 )

[node name="btn_attack" type="Control" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1017.0
margin/top = 615.0
margin/right = 1115.0
margin/bottom = 712.0

[node name="Sprite" type="Sprite" parent="HUD/btn_attack"]

texture = ExtResource( 5 )
centered = false

[connection signal="input_event" from="HUD/btn_jump" to="." method="_on_btn_jump_input_event"]

[connection signal="input_event" from="HUD/btn_attack" to="." method="_on_btn_attack_input_event"]


